2.42-a2 (devel.20): Prescribed SOFIA headers & Java 11+ compatibility.